--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "portfilio-task",
+  "homepage": "https://Ahmad-mh1999.github.io/Ahmed_Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -14,6 +17,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.10",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -30,6 +34,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-icons": "^3.0.0",
+    "@types/react-slick": "^0.23.13",
     "@types/slick-carousel": "^1.6.40",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
